<resources>
    <string name="app_name">Varis</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_licenses">License</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_username_placeholder">Username</string>
    <string name="navigation_drawer_email_placeholder">email@example.com</string>

    <!-- Messages -->
    <string name="error_failed_loading_repos">Failed to load repositories: \n%1$s</string>
    <string name="error_failed_loading_build_history">Failed to load build history: \n%1$s</string>
    <string name="error_failed_loading_build_details">Failed to load build details: \n%1$s</string>
    <string name="error_failed_loading_pull_requests">Failed to load pull requests: \n%1$s</string>
    <string name="error_failed_loading_branches">Failed to load branches: \n%1$s</string>
    <string name="error_failed_auth">Unable to authenticate: \n%1$s</string>
    <string name="error_network">Network problem. Check your network connection and try again</string>
    <string name="error_no_response">No response from the server. Try again later</string>
    <string name="error_parsing">Parsing error occurred. Try again later</string>
    <string name="loading_msg">Loading...</string>

    <!-- Main screen -->
    <string name="main_activity_action_search">Search</string>
    <string name="main_activity_search_repo_hint">Search repository</string>
    <string name="repo_empty_text">No repositories found</string>

    <!-- Auth screen -->
    <string name="auth_title">Authorization</string>
    <string name="auth_username_hint">Username</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_intro_text">Input your GitHub credentials. \nIf you have never used Travis CI before, do first login from Travis CI web page.</string>
    <string name="auth_login_btn">Login</string>
    <string name="auth_invalid_username_msg">Username cannot be empty</string>
    <string name="auth_invalid_password_msg">Password cannot be empty</string>
    <string name="auth_security_code_hint">Security code</string>
    <string name="auth_confirm_btn">Confirm</string>
    <string name="auth_invalid_security_code">Security code cannot be empty</string>
    <string name="auth_server_opensource">Travis CI (travis-ci.org)</string>
    <string name="auth_server_pro">Travis CI Pro (travis-ci.com)</string>
    <string name="auth_server_header">Server</string>
    <string name="oauth_login">OAuth Login</string>
    <string name="personal_token">Personal Token</string>
    <string name="auth_invalid_token_msg">Token cannot be empty.</string>

    <!-- Search screen -->
    <string name="search_results_title">Search results</string>

    <!-- Repository item -->
    <string name="repo_finished_at">Finished: %1$s</string>
    <string name="repo_build_in_progress">In progress</string>
    <string name="repo_duration">Duration: %1$s</string>

    <!-- About screen -->
    <string name="about_title">About</string>
    <string name="about_github_link">&lt;a href=\"https://github.com/dkhmelenko/Varis-Android\">GitHub&lt;/a></string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_contact_email">d.khmelenko@gmail.com</string>

    <!-- Build history -->
    <string name="build_history_title">Build history</string>
    <string name="build_finished_at">Finished: %1$s</string>
    <string name="build_build_in_progress">In progress</string>
    <string name="build_duration">Duration: %1$s</string>
    <string name="build_build_number">Build #%1$s %2$s</string>

    <!-- Repository details -->
    <string name="repo_details_title">Repository details</string>
    <string name="repo_details_tab_build_history">Build history</string>
    <string name="repo_details_tab_branches">Branches</string>
    <string name="repo_details_tab_pull_requests">Pull requests</string>
    <string name="repo_details_branches_empty">No branches found</string>
    <string name="repo_details_builds_empty">No builds found</string>
    <string name="repo_details_pull_request_empty">No pull requests found</string>

    <!-- Build details -->
    <string name="build_details_title">Build details</string>
    <string name="build_details_job_number">Job #%1$s</string>
    <string name="build_details_job_duration">Duration: %1$s</string>
    <string name="build_details_job_in_progress">In progress</string>
    <string name="build_details_empty">No build details</string>
    <string name="build_details_action_restart">Restart</string>
    <string name="build_details_action_cancel">Cancel</string>
    <string name="pull_request_number">PR #%1$s</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_server_type_title">Server</string>
    <string name="settings_setver_custom_input_text">Input address of the server</string>
    <string name="settings_server_input_btn_ok">OK</string>
    <string name="settings_server_input_btn_cancel">Cancel</string>
    <string name="settings_server_input_error_empty">Address cannot be empty</string>

    <!-- Open source licenses -->
    <string name="dialog_licenses_title">Open source licenses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>


</resources>
