<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.khmelenko.lab.varis.auth.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/auth_server_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/auth_server_header"
                android:textSize="19sp"/>

            <RadioGroup
                android:id="@+id/auth_server_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/auth_server_opensource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_server_opensource"/>

                <RadioButton
                    android:id="@+id/auth_server_pro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_server_pro"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/auth_login_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="10dp"
                android:text="@string/auth_intro_text"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/auth_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_username_hint"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"/>

            <Button
                android:id="@+id/auth_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/auth_login_btn"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oauth_login"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/oauth_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/personal_token"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/oauth_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/oauth_login"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
